# prof-spillet-c

./: .gitignore  CMakeLists.txt  build.sh
include/: SolutionGenerator.h  board.h  list.h  piece.h
resources/kra-files/: head.kra  pants.kra  person.kra
src/: CMakeLists.txt  SolutionGenerator.cpp  board.cpp  genPieces.cpp  list.cpp  piece.cpp  prof.cpp
